git all the stuff so far