@@ -4,6 +4,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import uk.gov.hmcts.reform.fpl.enums.CMOReviewOutcome;
 import uk.gov.hmcts.reform.fpl.enums.HearingType;
 import uk.gov.hmcts.reform.fpl.enums.State;
 import uk.gov.hmcts.reform.fpl.exceptions.CMONotFoundException;
@@ -14,10 +15,12 @@ import uk.gov.hmcts.reform.fpl.model.Other;
 import uk.gov.hmcts.reform.fpl.model.ReviewDecision;
 import uk.gov.hmcts.reform.fpl.model.common.Element;
 import uk.gov.hmcts.reform.fpl.model.common.dynamic.DynamicList;
+import uk.gov.hmcts.reform.fpl.model.event.ReviewDraftOrdersData;
 import uk.gov.hmcts.reform.fpl.model.order.HearingOrder;
 import uk.gov.hmcts.reform.fpl.model.order.HearingOrdersBundle;
 import uk.gov.hmcts.reform.fpl.model.order.HearingOrdersBundles;
 import uk.gov.hmcts.reform.fpl.model.order.generated.GeneratedOrder;
+import uk.gov.hmcts.reform.fpl.service.JudicialService;
 import uk.gov.hmcts.reform.fpl.service.OthersService;
 import uk.gov.hmcts.reform.fpl.utils.ElementUtils;
 
@@ -28,7 +31,7 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
+import java.util.stream.IntStream;
 
 import static com.google.common.collect.Lists.newArrayList;
 import static java.util.stream.Collectors.toList;
@@ -38,8 +41,10 @@ import static uk.gov.hmcts.reform.fpl.enums.CMOReviewOutcome.JUDGE_REQUESTED_CHA
 import static uk.gov.hmcts.reform.fpl.enums.CMOReviewOutcome.REVIEW_LATER;
 import static uk.gov.hmcts.reform.fpl.enums.CMOReviewOutcome.SEND_TO_ALL_PARTIES;
 import static uk.gov.hmcts.reform.fpl.enums.CMOStatus.SEND_TO_JUDGE;
+import static uk.gov.hmcts.reform.fpl.enums.JudgeType.FEE_PAID_JUDGE;
 import static uk.gov.hmcts.reform.fpl.enums.YesNo.NO;
 import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.asDynamicList;
+import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.element;
 import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.unwrapElements;
 
 @Service
@@ -54,6 +59,7 @@ public class ApproveDraftOrdersService {
     private final BlankOrderGenerator blankOrderGenerator;
     private final HearingOrderGenerator hearingOrderGenerator;
     private final OthersService othersService;
+    private final JudicialService judicialService;
 
     private static final String ORDER_BUNDLES_DRAFT = "hearingOrdersBundlesDrafts";
     private static final String REVIEW_DECISION = "reviewDecision";
@@ -240,9 +246,9 @@ public class ApproveDraftOrdersService {
     @SuppressWarnings("unchecked")
     public void reviewC21Orders(CaseData caseData, Map<String, Object> data,
                                 Element<HearingOrdersBundle> selectedOrdersBundle) {
-        List<Element<HearingOrder>> draftOrders = Stream.of(selectedOrdersBundle.getValue().getOrders(),
-                selectedOrdersBundle.getValue().getAllConfidentialOrders()).flatMap(List::stream)
-            .filter(order -> !order.getValue().getType().isCmo()).collect(toList());
+        List<Element<HearingOrder>> draftOrders = selectedOrdersBundle.getValue()
+            .getAllOrdersAndConfidentialOrders().stream()
+            .filter(order -> !order.getValue().getType().isCmo()).toList();
 
         List<Element<HearingOrder>> ordersToBeSent = defaultIfNull((
             List<Element<HearingOrder>>) data.get(ORDERS_TO_BE_SENT), newArrayList());
@@ -251,8 +257,7 @@ public class ApproveDraftOrdersService {
         List<Element<GeneratedOrder>> orderCollection = caseData.getOrderCollection();
 
         for (Element<HearingOrder> orderElement : draftOrders) {
-            Map<String, Object> reviewDecisionMap = (Map<String, Object>) data.get(REVIEW_DECISION + counter);
-            ReviewDecision reviewDecision = mapper.convertValue(reviewDecisionMap, ReviewDecision.class);
+            ReviewDecision reviewDecision = caseData.getReviewDraftOrdersData().getReviewDecision(counter);
 
             if (reviewDecision != null && reviewDecision.getDecision() != null
                 && !REVIEW_LATER.equals(reviewDecision.getDecision())) {
@@ -394,5 +399,35 @@ public class ApproveDraftOrdersService {
                     .hasAddressAdded())
                 .map(other -> other.getValue().getName()).collect(Collectors.joining(", "))
         ).orElse(null);
+    }
+
+    public String getJudgeTitleAndNameOfCurrentUser(CaseData caseData) {
+        return judicialService.getJudgeTitleAndNameOfCurrentUser(
+                (FEE_PAID_JUDGE.equals(caseData.getAllocateJudgeEventData().getJudgeType()))
+                    ? caseData.getAllocateJudgeEventData().getFeePaidJudgeTitle() : null);
+    }
+
+    public Map<String, Object> previewOrderWithCoverSheet(CaseData caseData) {
+        final List<Element<HearingOrder>> draftOrders = getSelectedHearingDraftOrdersBundle(caseData)
+            .getValue().getAllOrdersAndConfidentialOrders().stream()
+            .filter(order -> !order.getValue().getType().isCmo())
+            .toList();
+
+        final ReviewDraftOrdersData reviewDraftOrdersData = caseData.getReviewDraftOrdersData();
+
+        // Filter out the orders that have been approved by Judge without amendments
+        return Map.of(
+            "previewApprovedOrders", IntStream.range(0, draftOrders.size())
+                .filter(counter -> CMOReviewOutcome.SEND_TO_ALL_PARTIES
+                    .equals(reviewDraftOrdersData.getReviewDecision(counter).getDecision()))
+                .mapToObj(counter -> {
+                    Element<HearingOrder> approvedOrderElement = draftOrders.get(counter);
+                    HearingOrder approvedOrder = approvedOrderElement.getValue();
+                    return element(approvedOrderElement.getId(), approvedOrder.toBuilder()
+                        .order(hearingOrderGenerator.addCoverSheet(caseData, (approvedOrder.isConfidentialOrder()
+                            ? approvedOrder.getOrderConfidential() : approvedOrder.getOrder())))
+                        .build());
+                })
+                .toList());
     }
 }
